# obsidian-rag-local

./: .gitignore  README.md  app.py  config.py  indexing.py  main.py  pyproject.toml  rag.py
